# aocpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
.github/workflows/: build.yml  test.yml
lib/: CMakeLists.txt
lib/include/: day01.h
lib/source/: day01.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/source/: day01_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/source/: day01Tests.cpp
